# server/docs/swagger.json
@@ -164,7 +164,7 @@
                 "parameters": [
                     {
                         "description": "add project",
-                        "name": "tag",
+                        "name": "project",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -238,18 +238,7 @@
                 "tags": [
                     "Project"
                 ],
-                "summary": "Get all projects",
-                "parameters": [
-                    {
-                        "description": "projectId",
-                        "name": "tag",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.TaskByProject"
-                        }
-                    }
-                ],
+                "summary": "Get all tasks by project id",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -552,6 +541,11 @@
         "models.AddTask": {
             "type": "object",
             "properties": {
+                "column": {
+                    "type": "string",
+                    "format": "uuid",
+                    "example": "550e8400-e29b-41d4-a716-446655440000"
+                },
                 "projectId": {
                     "type": "string",
                     "format": "uuid",
@@ -657,6 +651,11 @@
         "models.Task": {
             "type": "object",
             "properties": {
+                "column": {
+                    "type": "string",
+                    "format": "uuid",
+                    "example": "550e8400-e29b-41d4-a716-446655440000"
+                },
                 "id": {
                     "type": "string",
                     "format": "uuid",
@@ -674,16 +673,17 @@
                 "taskTitle": {
                     "type": "string",
                     "example": "task name"
-                }
-            }
-        },
-        "models.TaskByProject": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "string",
-                    "format": "uuid",
-                    "example": "550e8400-e29b-41d4-a716-446655440000"
+                },
+                "users": {
+                    "type": "array",
+                    "items": {
+                        "type": "string",
+                        "format": "[]uuid"
+                    },
+                    "example": [
+                        "[550e8400-e29b-41d4-a716-446655440000",
+                        "550e8400-e29b-41d4-a716-446655440000]"
+                    ]
                 }
             }
         },
@@ -736,6 +736,11 @@
         "models.UpdateTask": {
             "type": "object",
             "properties": {
+                "column": {
+                    "type": "string",
+                    "format": "uuid",
+                    "example": "550e8400-e29b-41d4-a716-446655440000"
+                },
                 "id": {
                     "type": "string",
                     "format": "uuid",
@@ -753,8 +758,26 @@
                 "taskTitle": {
                     "type": "string",
                     "example": "task name"
+                },
+                "users": {
+                    "type": "array",
+                    "items": {
+                        "type": "string",
+                        "format": "[]uuid"
+                    },
+                    "example": [
+                        "[550e8400-e29b-41d4-a716-446655440000",
+                        "550e8400-e29b-41d4-a716-446655440000]"
+                    ]
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
