# server/server.go
@@ -22,6 +22,9 @@ import (
 // @BasePath  /api/v1
 // @Title     Application Api
 // @Version   1.0
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name token
 
 func Init() {
 	//swag init --parseDependency --parseInternal -g server.go
@@ -45,19 +48,20 @@ func Init() {
 		MaxAge:           12 * time.Hour,
 	}))
 
-	router.LoadHTMLGlob("./server/api/templates/*.html")
-
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	router.GET("/swagger", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	router.POST("/login", v1.LoginPostHandler())
+	router.POST("/register", v1.RegisterHandler())
+	router.GET("/logout", v1.LogoutGetHandler())
 
 	api := router.Group("/api")
 	{
+		api.Use(middleware.Auth)
 		apiV1 := api.Group("/v1")
 		{
 			apiV1.GET("/", v1.HealthCheck())
 			tag := apiV1.Group("/tag")
 			{
-				//tag.Use(middleware.Auth)
 				tag.GET("", v1.GetAllTags())
 				tag.POST("", v1.CreateTag())
 				tag.PATCH(":id", v1.UpdateTag())
@@ -66,7 +70,6 @@ func Init() {
 			}
 			task := apiV1.Group("/task")
 			{
-				//task.Use(middleware.Auth)
 				task.GET("", v1.GetAllTasks())
 				task.POST("", v1.CreateTask())
 				task.PATCH("", v1.UpdateTask())
@@ -74,25 +77,11 @@ func Init() {
 			}
 			proj := apiV1.Group("/project")
 			{
-				//proj.Use(middleware.Auth)
 				proj.GET("", v1.GetAllProjects())
 				proj.GET("/task", v1.GetAllTasksByProject())
 				proj.POST("", v1.CreateProject())
 				proj.PATCH("", v1.UpdateProject())
 				proj.DELETE("", v1.DeleteProject())
-			}
-			authPublic := apiV1.Group("/auth")
-			{
-				authPublic.GET("/login", v1.LoginGetHandler())
-				authPublic.POST("/login", v1.LoginPostHandler())
-				authPublic.GET("/", v1.IndexGetHandler())
-				authPublic.POST("/register", v1.RegisterHandler())
-			}
-			authPrivate := apiV1.Group("/auth")
-			{
-				authPrivate.Use(middleware.Auth)
-				authPrivate.GET("/dashboard", v1.DashboardGetHandler())
-				authPrivate.GET("/logout", v1.LogoutGetHandler())
 			}
 		}
 	}
